--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,4 @@
-cd rea{
+{
   "name": "server",
   "version": "0.0.0",
   "private": true,
@@ -12,6 +12,7 @@ cd rea{
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
+    "node-fetch": "^2.6.0",
     "pg": "^8.3.0"
   }
 }
