--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "node-fetch": "^2.6.0",
-    "pg": "^8.3.0"
+    "pg": "^8.3.0",
+    "python-shell": "^2.0.1"
   }
 }
