--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "morgan": "~1.9.1",
     "node-fetch": "^2.6.0",
     "pg": "^8.3.0",
-    "python-shell": "^2.0.1"
+    "python-shell": "^2.0.1",
+    "serve-favicon": "^2.5.0"
   }
 }
